--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ env:
     - NG_CLI_ANALYTICS="false"
     - JHI_JDK=8
 before_install:
-  -
-    if [[ $JHI_JDK = '8' ]]; then
+  - if [[ $JHI_JDK = '8' ]]; then
       echo '*** Using OpenJDK 8'
     else
       echo '*** Using OpenJDK 11 by default'
